--- a/artist.html
+++ b/artist.html
@@ -25,19 +25,33 @@
 		</div>
 		<div id="hamburger">
 			<a class="icon" onclick="navbar()">
-				<i class="fa fa-bars green" style="font-size:35px;"></i>
+				<i class="fa fa-bars green" id="hbg" style="font-size:35px;"></i>
 			</a>
 		</div>
 		<h1 class="green Winter" id="h-history">ARTIST</h1>
+		<!-- menu -->
 		<ul class="innerMenu darkGreen Srinakharinwirot" id="inner_menu">
-			<li id="h_menu1" class="green clickMenu">เฉลิมชัย โฆษิตพิพัฒน์</li>
-			<li id="h_menu2">ประหยัด พงษ์ดำ</li>
-			<li id="h_menu3">ปรีชา เถาทอง</li>
-			<li id="h_menu4">พิชัย นิรันต์</li>
-			<li id="h_menu5">เนติกร ชินโย</li>
-			<li id="h_menu6">จินตนา เปี่ยมศิริ</li>
-			<li id="h_menu7">ปัญญา วิจินธนสาร</li>
-			<li id="h_menu8">ธีระวัฒน์ คะนะมะ</li>
+			<li id="m1" class="setDisplay"><a href="story.html">STORY</a></li>
+			<li class="dropdown-submenu setDisplay" id="m2">
+				<a href="history.html" id="head_m2">HISTORY</a>
+			</li>
+			<li class="dropdown-submenu setDisplay" id="m3" >
+				<a href="media.html" id="head_m3">MEDIA</a>
+			</li>
+			<li class="dropdown-submenu" id="m4">
+				<a href="artist.html" id="head_m4" class="setDisplay">ARTIST</a>
+				<ul class="innerMenu">
+					<li id="a_menu1" class="green clickMenu">เฉลิมชัย โฆษิตพิพัฒน์</li>
+					<li id="a_menu2">ประหยัด พงษ์ดำ</li>
+					<li id="a_menu3">ปรีชา เถาทอง</li>
+					<li id="a_menu4">พิชัย นิรันต์</li>
+					<li id="a_menu5">เนติกร ชินโย</li>
+					<li id="a_menu6">จินตนา เปี่ยมศิริ</li>
+					<li id="a_menu7">ปัญญา วิจินธนสาร</li>
+					<li id="a_menu8">ธีระวัฒน์ คะนะมะ</li>
+				</ul>
+				
+			</li>
 		</ul>
 		<div id="backHome">
 			<a href="index.html"><i class="fa fa-chevron-circle-left lightGreen" style="font-size:48px"></i></a>
@@ -273,61 +287,22 @@
 	</div>
 
 	<script type="text/javascript">
-
-		content = [
-		{
-			"i":"ประหยัด",
-			"ii":"พงษ์ดำ",
-			"iii":"ศาสตราจารย์เกียรติคุณประหยัด พงษ์ดำ เกิด ๒๘ ตุลาคม พ.ศ.๒๔๗๗ และ เสียชีวิต ๑๙ กันยายน พ.ศ.๒๕๕๗ ศิลปินแห่งชาติ สาขาทัศนศิลป์(ภาพพิมพ์) ประจำปีพ.ศ.๒๔๔๑, อดีตคณบดี คณะจิตรกรรม ประติมากรรม และภาพพิมพ์ มหาวิทยาลัยศิลปากร"
-		},
-		{
-			"i":"ปรีชา",
-			"ii":"เถาทอง",
-			"iii":"ศาสตราจารย์ปรีชา เถาทอง  เกิด ๒๗ เมษายน พ.ศ.๒๔๙๑  ได้รับการเชิดชูเกียรติในฐานะศิลปินแห่งชาติ สาขาทัศนศิลป์ สาขาย่อยการ(จิตรกรรม) ประจำปีพ.ศ.๒๕๕๒ จบการศึกษาระดับปริญญาตรี ศิลปบัณฑิต จิตรกรรม (เกียรตินิยมอันดับ ๒) มหาวิทยาลัยศิลปากร กรุงเทพมหานคร ได้รับทุนไป ศึกษาที่ L'Accademia di belle Arte ณ กรุงโรม ประเทศอิตาลี ในปี พ.ศ.๒๕๑๙ และ จบการศึกษาระดับปริญญาโท ศิลปมหาบัณฑิต จิตรกรรม มหาวิทยาลัยศิลปากร กรุงเทพมหานคร"
-		},
-		{
-			"i":"พิชัย",
-			"ii":"นิรันต์",
-			"iii":"นายพิชัย นิรันต์ เกิด ๗ กุมภาพันธ์ พ.ศ.๒๕๗๙ ได้รับการยกย่องเชิดชูเกียรติเป็นศิลปินแห่งชาติ สาขาทัศนศิลป์ (จิตรกรรม) ประจำปีพ.ศ.๒๕๔๖"
-		},
-		{
-			"i":"เนติกร",
-			"ii":"ชินโย",
-			"iii":"อาจารย์เนติกร ชินโย เกิด ๘ ธันวาคม พ.ศ.๒๕๐๙ และยังเป็นอาจารย์หมวดพื้นฐานทางศิลปะ คณะศิลปกรรมศาสตร์ ได้รับรางวัลที่ ๒ ในการประกวดศิลปกรรมแห่งชาติ และรางวัลชนะเลิศ ในการประกวดภาพพิมพ์และวาดเส้นนานาชาติ"
-		},
-		{
-			"i":"จินตนา",
-			"ii":"เปี่ยมศิริ",
-			"iii":"อาจารย์จินตนา เปี่ยมศิริ เกิด ๑๐ กันยายน พ.ศ.๒๕๐๙ การศึกษา ศิลปบัณฑิต (ศิลปะไทย) คณะจิตรกรรมประติมากรรมและภาพพิมพ์ มหาวิทยาลัยศิลปากร ศิลปมหาบัณฑิต (ศิลปะไทย) บัณฑิตวิทยาลัย มหาวิทยาลัยศิลปากร"
-		},
-		{
-			"i":"ปัญญา",
-			"ii":"วิจินธนสาร",
-			"iii":"อาจารย์ปัญญา วิจินธนสาร เกิด ๒๔ มิถุนายน พ.ศ.๒๔๙๙ ได้รับการเชิดชูเกียรติในฐานะศิลปินแห่งชาติ ประจำปี พ.ศ.๒๕๕๗ สาขาทัศนศิลป์ (จิตรกรรม) เคยดำรงตำแหน่งคณบดี คณะจิตรกรรมประติมากรรมและภาพพิมพ์ และรองอธิบดีฝ่ายศิลปวัฒนธรรมของมหาวิทยาลัยศิลปากร และขณะนี้ยังคงรับเป็นอาจารย์บรรยายพิเศษให้กับทางมหาวิทยาลัยฯ"
-		},
-		{
-			"i":"ธีระวัฒน์",
-			"ii":"คะนะมะ",
-			"iii":"อาจารย์ ธีระวัฒน์ คะนะมะ เกิดวันที่ ๓๐ ธันวาคม พ.ศ.๒๕๐๗ จบการศึกษาจากวิทยาลัยอาชีวศึกษามหาสารคาม แล้วเข้ามาศึกษาที่คณะจิตรกรรมฯมหาวิทยาลัยศิลปากร(ศิลปไทย) ได้รางวัลยอดเยี่ยม พู่กันทอง จิตรกรรมเทิดพระเกียรติสมเด็จพระเทพรัตนราชสุดาฯสยามบรมราชกุมารี"
-		}
-		]
 		
-		h_menu1.addEventListener("click", clickContent1);
-		h_menu2.addEventListener("click", clickContent2);
-		h_menu3.addEventListener("click", clickContent3);
-		h_menu4.addEventListener("click", clickContent4);
-		h_menu5.addEventListener("click", clickContent5);
-		h_menu6.addEventListener("click", clickContent6);
-		h_menu7.addEventListener("click", clickContent7);
-		h_menu8.addEventListener("click", clickContent8);
-		// let chkHeight = window.innerHeight;
+		a_menu1.addEventListener("click", clickContent1);
+		a_menu2.addEventListener("click", clickContent2);
+		a_menu3.addEventListener("click", clickContent3);
+		a_menu4.addEventListener("click", clickContent4);
+		a_menu5.addEventListener("click", clickContent5);
+		a_menu6.addEventListener("click", clickContent6);
+		a_menu7.addEventListener("click", clickContent7);
+		a_menu8.addEventListener("click", clickContent8);
 		
 		function clickContent1(){
 			clearClick();
 			inner_menu.classList.remove("show-menu");
 			a_content1.classList.remove("setDisplay");
-			h_menu1.classList.add("green");
-			h_menu1.classList.add("clickMenu");			
+			a_menu1.classList.add("green");
+			a_menu1.classList.add("clickMenu");			
 			a_content2.classList.add("setDisplay");
 			a_content3.classList.add("setDisplay");
 			a_content4.classList.add("setDisplay");
@@ -341,8 +316,8 @@
 			clearClick();
 			inner_menu.classList.remove("show-menu");
 			a_content2.classList.remove("setDisplay");
-			h_menu2.classList.add("green");
-			h_menu2.classList.add("clickMenu");
+			a_menu2.classList.add("green");
+			a_menu2.classList.add("clickMenu");
 			a_content1.classList.add("setDisplay");			
 			a_content3.classList.add("setDisplay");
 			a_content4.classList.add("setDisplay");
@@ -356,8 +331,8 @@
 			clearClick();
 			inner_menu.classList.remove("show-menu");
 			a_content3.classList.remove("setDisplay");
-			h_menu3.classList.add("green");
-			h_menu3.classList.add("clickMenu");			
+			a_menu3.classList.add("green");
+			a_menu3.classList.add("clickMenu");			
 			a_content1.classList.add("setDisplay");
 			a_content2.classList.add("setDisplay");
 			a_content4.classList.add("setDisplay");
@@ -371,8 +346,8 @@
 			clearClick();
 			inner_menu.classList.remove("show-menu");
 			a_content4.classList.remove("setDisplay");
-			h_menu4.classList.add("green");
-			h_menu4.classList.add("clickMenu");
+			a_menu4.classList.add("green");
+			a_menu4.classList.add("clickMenu");
 			a_content1.classList.add("setDisplay");
 			a_content2.classList.add("setDisplay");
 			a_content3.classList.add("setDisplay");
@@ -386,8 +361,8 @@
 			clearClick();
 			inner_menu.classList.remove("show-menu");
 			a_content5.classList.remove("setDisplay");
-			h_menu5.classList.add("green");
-			h_menu5.classList.add("clickMenu");
+			a_menu5.classList.add("green");
+			a_menu5.classList.add("clickMenu");
 			a_content1.classList.add("setDisplay");
 			a_content2.classList.add("setDisplay");
 			a_content3.classList.add("setDisplay");
@@ -401,8 +376,8 @@
 			clearClick();
 			inner_menu.classList.remove("show-menu");
 			a_content6.classList.remove("setDisplay");
-			h_menu6.classList.add("green");
-			h_menu6.classList.add("clickMenu");
+			a_menu6.classList.add("green");
+			a_menu6.classList.add("clickMenu");
 			a_content1.classList.add("setDisplay");
 			a_content2.classList.add("setDisplay");
 			a_content3.classList.add("setDisplay");
@@ -416,8 +391,8 @@
 			clearClick();
 			inner_menu.classList.remove("show-menu");
 			a_content7.classList.remove("setDisplay");
-			h_menu7.classList.add("green");
-			h_menu7.classList.add("clickMenu");
+			a_menu7.classList.add("green");
+			a_menu7.classList.add("clickMenu");
 			a_content1.classList.add("setDisplay");
 			a_content2.classList.add("setDisplay");
 			a_content3.classList.add("setDisplay");
@@ -431,8 +406,8 @@
 			clearClick();
 			inner_menu.classList.remove("show-menu");
 			a_content8.classList.remove("setDisplay");
-			h_menu8.classList.add("green");
-			h_menu8.classList.add("clickMenu");
+			a_menu8.classList.add("green");
+			a_menu8.classList.add("clickMenu");
 			a_content1.classList.add("setDisplay");
 			a_content2.classList.add("setDisplay");
 			a_content3.classList.add("setDisplay");
@@ -443,26 +418,59 @@
 		}
 
 		function clearClick(){			
-			h_menu1.classList.remove("green");
-			h_menu1.classList.remove("clickMenu");
-			h_menu2.classList.remove("green");
-			h_menu2.classList.remove("clickMenu");
-			h_menu3.classList.remove("green");
-			h_menu3.classList.remove("clickMenu");
-			h_menu4.classList.remove("green");
-			h_menu4.classList.remove("clickMenu");
-			h_menu5.classList.remove("green");
-			h_menu5.classList.remove("clickMenu");
-			h_menu6.classList.remove("green");
-			h_menu6.classList.remove("clickMenu");
-			h_menu7.classList.remove("green");
-			h_menu7.classList.remove("clickMenu");
-			h_menu8.classList.remove("green");
-			h_menu8.classList.remove("clickMenu");
+			a_menu1.classList.remove("green");
+			a_menu1.classList.remove("clickMenu");
+			a_menu2.classList.remove("green");
+			a_menu2.classList.remove("clickMenu");
+			a_menu3.classList.remove("green");
+			a_menu3.classList.remove("clickMenu");
+			a_menu4.classList.remove("green");
+			a_menu4.classList.remove("clickMenu");
+			a_menu5.classList.remove("green");
+			a_menu5.classList.remove("clickMenu");
+			a_menu6.classList.remove("green");
+			a_menu6.classList.remove("clickMenu");
+			a_menu7.classList.remove("green");
+			a_menu7.classList.remove("clickMenu");
+			a_menu8.classList.remove("green");
+			a_menu8.classList.remove("clickMenu");
+			hbg.classList.remove("fa-times");
+			hbg.classList.add("fa-bars");
+			hbg.classList.remove("darkOrange");
 		}
 
 		function navbar(){
 			inner_menu.classList.toggle("show-menu");
+			m1.classList.remove("setDisplay");
+			m2.classList.remove("setDisplay");
+			m3.classList.remove("setDisplay");
+			m4.classList.remove("setDisplay");
+			hbg.classList.toggle("fa-bars");
+			hbg.classList.toggle("fa-times");
+			hbg.classList.toggle("darkOrange");
+		}
+
+		window.onload = chkSize();
+		function chkSize(){
+			if (screen.width < 812) {
+				// mobile
+				head_m4.classList.remove("setDisplay");
+				head_m4.classList.add("lightGreen");
+			}
+		}
+
+		window.addEventListener('resize', reportWindowSize);
+
+		function reportWindowSize(){
+			if (screen.width > 812){
+				// desktop
+				m1.classList.add("setDisplay");
+				m2.classList.add("setDisplay");
+				m3.classList.add("setDisplay");
+				head_m4.classList.add("setDisplay");
+			}else{
+				head_m4.classList.remove("setDisplay");
+			}
 		}
 
 		function toHomepage(){
