--- a/media.html
+++ b/media.html
@@ -88,7 +88,7 @@
 
 	<div class="h-content setDisplay" id="m_content3">
 		<p class="darkOrange Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">แอนิเมชั่นพระมหาชนก</p>
-		<iframe width="90%" height="500" src="https://www.youtube.com/embed/XMBPsnacYWI?autoplay=1" frameborder="0" allowfullscreen></iframe>
+		<iframe width="90%" height="500" src="https://www.youtube.com/embed/XMBPsnacYWI?autoplay=1" allow="autoplay" frameborder="0" allowfullscreen></iframe>
 		<!-- allow="autoplay" -->
 		<div class="h-section-1" id="sec_1">
 			<div class="img-left">
