--- a/story.html
+++ b/story.html
@@ -7,6 +7,8 @@
 	<meta name=description content="">
 	<meta name=viewport content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<style type="text/css">
@@ -17,18 +19,56 @@
 </head>
 <body>
 
-	<div id="warp">
-
-		<div class="h-left" id="h_left">
-				
+	<div class="h-menu setBgWhite" id="h_menu">
+		<div id="divLogo">
+			<img src="img/home/logo.svg" id="logo" onclick="toHomepage()">
 		</div>
-
-		<div class="h-menu" id="h_menu">
-			<a href="index.html"><h2 class="darkOrange">พระมหาชนก</h2></a>
-			<h1 class="darkGreen Winter">STORY</h1>
-			<i class="fas fa-chevron-circle-left lightGreen" id="left-arrow"></i>
+		<div id="hamburger">
+			<a class="icon" onclick="navbar()">
+				<i class="fa fa-bars green" id="hbg" style="font-size:35px;"></i>
+			</a>
 		</div>
+		<h1 class="lightGreen Winter" id="h-history">STORY</h1>
+		<ul class="innerMenu darkGreen Srinakharinwirot" id="inner_menu">
+			<li id="m1">
+				<a href="story.html" class="setDisplay">STORY</a>
+			</li>
+			<li class="dropdown-submenu setDisplay" id="m2">
+				<a href="history.html" id="head_m2">HISTORY</a>
+			</li>
+			<li class="dropdown-submenu setDisplay" id="m3" >
+				<a href="media.html" id="head_m3" class="setDisplay">MEDIA</a>
+			</li>
+			<li class="dropdown-submenu setDisplay" id="m4">
+				<a href="artist.html" id="head_m4">ARTIST</a>				
+			</li>
+		</ul>
+		<div id="backHome">
+			<a href="index.html"><i class="fa fa-chevron-circle-left lightGreen" style="font-size:48px"></i></a>
+		</div>			
+		
 	</div>
 
+	<div class="h-content" id="m_content1">
+		<p class="lightGreen Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">เนื้อเรื่อง<br>พระมหาชนก</p>
+		<img src="img/story/11.png">
+		<p class="darkGreen s-content">
+			พระมหากษัตริย์ผู้ครองราชย์นครมิถิลาเมืองหลวงแห่งแคว้นวิเทหะ ทรงมีพระราชโอรสสองพระองค์ คือ พระอริฏฐชนกและพระโปลชนก หลังจากพระราชบิดาสวรรคต พระอริฏฐชนกผู้เป็นพระมหาอุปราชก็เสด็จขึ้นครองราชย์ต่อมาโดยทรงแต่งตั้งพระโปลชนกผู้เป็นน้องชายเป็นพระมหาอุปราช<br><br>
+			ในเวลาต่อได้มีเหล่าอำมาตย์ผู้ทุจริตบางคนออกอุบายให้พระอริฏฐชนกเกิดความระแวงน้องชายตนเอง โดยพากันเพ็ดทูลว่าพระโปลชนกกำลังวางแผนคิดการประทุษร้ายต่ออาณาจักร พระราชาทรงหลงเชื่ออำมาตย์เหล่านั้น จึงทรงให้ราชมัลจับกุมพระโปลชนกไปขังไว้ทว่าด้วยบุญบารมีของพระโปลชนก พระองค์จึงสามารถหลบออกจากที่คุมขังและเสด็จหนีไปยังชายแดนได้
+		</p>
+		<img src="img/story/12.png">
+		<p class="darkGreen s-content">
+			ครั้นเมื่อไปถึงก็มีบรรดาราษฏรผู้ที่จงรักภักดีต่อพระองค์พากันมาเข้าร่วมเป็นพวกด้วยมากมายและเมื่อถึงกาลที่เอื้ออำนวย พระโปลชนกก็ทรงตัดสินพระทัยยกกองทัพไปยังนครมิถิลา<br><br>
+			ครั้นเมื่อทัพของพระองค์ไปถึงบรรดาทหารรักษาเมืองจำนวนมากได้พากันแปรภักดิ์มาเข้ากับพระโปลชนกเนื่องจากเห็นใจที่พระโปลชนกถูกจับไปขังไว้อย่างไม่เป็นธรรม<br><br>
+			เมื่อพระพระอริฏฐชนกทรงทราบว่าพระโปลชนกยกทัพมาชิงราชสมบัติและได้มีเหล่าไพร่พลจำนวนมากแปรภักดิ์ พระองค์ตรัสสั่งพระมเหสีซึ่งกำลังทรงครรภ์แก่ให้ทรงหลบหนีเอาตัวรอด ส่วนพระองค์เองทรงยกทัพออกทำสงครามกับพระโปลชนกจนสิ้นพระชนม์ในสนามรบ เมื่อนั้นพระโปลชนกจึงทรงขึ้นเป็นกษัตริย์ครองนครมิถิลาสืบต่อมา
+		</p>
+		<img src="img/story/13.png">
+	</div>
+
+	<script type="text/javascript">
+		function toHomepage(){
+			location.href = "index.html";
+		}
+	</script>
 </body>
 </html>
