--- a/artist.html
+++ b/artist.html
@@ -226,7 +226,6 @@
 				<img src="img/artist/6/3.jpg" class="mobile-width">
 			</div>
 		</div>
-		
 	</div>
 
 	<div class="a-content setDisplay" id="a_content7">			
@@ -278,14 +277,16 @@
 				</p>
 			</div>
 
-			<div class="a-work">
+			
 				<img src="img/artist/8/1.jpg" class="mobile-width">
 				<img src="img/artist/8/2.jpg" class="mobile-width">
-			</div>
+			
 		</div>
+
+		
 		
 	</div>
-
+<footer class="footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเก้าเจ้าคุณทหารลาดกระบัง © 2019</footer>
 	<script type="text/javascript">
 		
 		a_menu1.addEventListener("click", clickContent1);
