--- a/media.html
+++ b/media.html
@@ -66,7 +66,6 @@
 				</p>
 			</div>
 		</div>
-		
 	</div>
 
 	<div class="h-content setDisplay" id="m_content2">
@@ -83,7 +82,6 @@
 				</p>
 			</div>
 		</div>
-		
 	</div>
 
 	<div class="h-content setDisplay" id="m_content3">
@@ -103,6 +101,7 @@
 					องก์ที่ ๓ ปัญญา
 				</p>
 			</div>
+
 		</div>
 
 		<div class="h-section-1" id="sec_1">
@@ -125,8 +124,11 @@
 				</p>
 			</div>
 		</div>
-		
 	</div>
+
+	<footer class="footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเก้าเจ้าคุณทหารลาดกระบัง © 2019</footer>
+
+
 
 	<script type="text/javascript">
 		
