--- a/story.html
+++ b/story.html
@@ -62,8 +62,11 @@
 			ครั้นเมื่อทัพของพระองค์ไปถึงบรรดาทหารรักษาเมืองจำนวนมากได้พากันแปรภักดิ์มาเข้ากับพระโปลชนกเนื่องจากเห็นใจที่พระโปลชนกถูกจับไปขังไว้อย่างไม่เป็นธรรม<br><br>
 			เมื่อพระพระอริฏฐชนกทรงทราบว่าพระโปลชนกยกทัพมาชิงราชสมบัติและได้มีเหล่าไพร่พลจำนวนมากแปรภักดิ์ พระองค์ตรัสสั่งพระมเหสีซึ่งกำลังทรงครรภ์แก่ให้ทรงหลบหนีเอาตัวรอด ส่วนพระองค์เองทรงยกทัพออกทำสงครามกับพระโปลชนกจนสิ้นพระชนม์ในสนามรบ เมื่อนั้นพระโปลชนกจึงทรงขึ้นเป็นกษัตริย์ครองนครมิถิลาสืบต่อมา
 		</p>
-		<img src="img/story/13.png">
+		<img src="img/story/13.png">		
 	</div>
+
+	<footer class="footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเก้าเจ้าคุณทหารลาดกระบัง © 2019
+	</footer>
 
 	<script type="text/javascript">
 		function toHomepage(){
