--- a/artist.html
+++ b/artist.html
@@ -60,48 +60,37 @@
 		
 	</div>
 	
-	<div class="a-content" id="a_content1">			
-		
-		<div class="a-section-1">
+	<div class="a-content" id="a_content1">
+		<div class="a-img">
+			<img src="img/artist/1/artist.jpg" class="h_imgContent" id="a_img">
+		</div>
 
-			<div class="a-img">
-				<img src="img/artist/1/artist.jpg" class="h_imgContent" id="a_img">
-			</div>
+		<div class="a-innerContent">
+			<p class="green Srinakharinwirot header" id="a_firstname">เฉลิมชัย</p>
+			<p class="green Srinakharinwirot header" id="a_lastname">โฆษิตพิพัฒน์</p>
+			<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
+				เฉลิมชัย โฆษิตพิพัฒน์ เกิด ๑๕ กุมภาพันธ์ พ.ศ.๒๔๙๘ เป็นจิตรกรไทยมีผลงานจิตรกรรมไทยหลายผลงาน เช่น ภาพจิตรกรรมไทยในอุโบสถวดพุทธประทีป กรุงลอนดอน ประเทศอังกฤษ, เขียนภาพประกอบบทพระราชนิพนธ์พระมหาชนกและผลงานศิลปะที่วัดร่องขุ่น ซึ่งมีทั้งงานสถาปัตยกรรม ประติมากรรมปูนปั้น และงานจิตรกรรมไทย ได้รับการยกย่องเป็นศิลปินแห่งชาติ สาขาทัศนศิลป์(จิตรกรรม) ในปีพ.ศ.๒๕๕๔
+			</p>
+		</div>
 
-			<div class="artistName">
-				<p class="green Srinakharinwirot header" id="a_firstname">เฉลิมชัย</p>
-				<p class="green Srinakharinwirot header" id="a_lastname">โฆษิตพิพัฒน์</p>
-			</div>
-			
-			
-			<div class="a-innerContent">
-				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
-					เฉลิมชัย โฆษิตพิพัฒน์ เกิด ๑๕ กุมภาพันธ์ พ.ศ.๒๔๙๘ เป็นจิตรกรไทยมีผลงานจิตรกรรมไทยหลายผลงาน เช่น ภาพจิตรกรรมไทยในอุโบสถวดพุทธประทีป กรุงลอนดอน ประเทศอังกฤษ, เขียนภาพประกอบบทพระราชนิพนธ์พระมหาชนกและผลงานศิลปะที่วัดร่องขุ่น ซึ่งมีทั้งงานสถาปัตยกรรม ประติมากรรมปูนปั้น และงานจิตรกรรมไทย ได้รับการยกย่องเป็นศิลปินแห่งชาติ สาขาทัศนศิลป์(จิตรกรรม) ในปีพ.ศ.๒๕๕๔
-				</p>
-			</div>
-
-			<div class="a-work">
-				<img src="img/artist/1/work.jpg" class="mobile-width">
-			</div>
+		<div class="a-work">
+			<img src="img/artist/1/work.jpg" class="mobile-width">
 		</div>
 		
 	</div>
 
+	
 	<div class="a-content setDisplay" id="a_content2">			
 		
 		<div class="a-section-1">
 
 			<div class="a-img">
 				<img src="img/artist/2/re.jpg" class="h_imgContent" id="a_img">
-			</div>
-
-			<div class="artistName">
-				<p class="green Srinakharinwirot header" id="a_firstname">ประหยัด</p>
-				<p class="green Srinakharinwirot header" id="a_lastname">พงษ์ดำ</p>
-			</div>
-			
+			</div>		
 			
 			<div class="a-innerContent">
+				<p class="green Srinakharinwirot header" id="a_firstname">ประหยัด</p>
+				<p class="green Srinakharinwirot header" id="a_lastname">พงษ์ดำ</p>
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					ศาสตราจารย์เกียรติคุณประหยัด พงษ์ดำ เกิด ๒๘ ตุลาคม พ.ศ.๒๔๗๗ และ เสียชีวิต ๑๙ กันยายน พ.ศ.๒๕๕๗ ศิลปินแห่งชาติ สาขาทัศนศิลป์(ภาพพิมพ์) ประจำปีพ.ศ.๒๔๔๑, อดีตคณบดี คณะจิตรกรรม ประติมากรรม และภาพพิมพ์ มหาวิทยาลัยศิลปากร
 				</p>
@@ -121,15 +110,11 @@
 
 			<div class="a-img">
 				<img src="img/artist/3/re.jpg" class="h_imgContent" id="a_img">
-			</div>
-
-			<div class="artistName">
-				<p class="green Srinakharinwirot header" id="a_firstname">ปรีชา</p>
-				<p class="green Srinakharinwirot header" id="a_lastname">เถาทอง</p>
-			</div>
-			
+			</div>		
 			
 			<div class="a-innerContent">
+				<p class="green Srinakharinwirot header" id="a_firstname">ปรีชา</p>
+				<p class="green Srinakharinwirot header" id="a_lastname">เถาทอง</p>
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					ศาสตราจารย์ปรีชา เถาทอง  เกิด ๒๗ เมษายน พ.ศ.๒๔๙๑  ได้รับการเชิดชูเกียรติในฐานะศิลปินแห่งชาติ สาขาทัศนศิลป์ สาขาย่อยการ(จิตรกรรม) ประจำปีพ.ศ.๒๕๕๒ จบการศึกษาระดับปริญญาตรี ศิลปบัณฑิต จิตรกรรม (เกียรตินิยมอันดับ ๒) มหาวิทยาลัยศิลปากร กรุงเทพมหานคร ได้รับทุนไป ศึกษาที่ L'Accademia di belle Arte ณ กรุงโรม ประเทศอิตาลี ในปี พ.ศ.๒๕๑๙ และ จบการศึกษาระดับปริญญาโท ศิลปมหาบัณฑิต จิตรกรรม มหาวิทยาลัยศิลปากร กรุงเทพมหานคร
 				</p>
@@ -151,13 +136,9 @@
 				<img src="img/artist/4/a.jpg" class="h_imgContent" id="a_img">
 			</div>
 
-			<div class="artistName">
+			<div class="a-innerContent">
 				<p class="green Srinakharinwirot header" id="a_firstname">พิชัย</p>
 				<p class="green Srinakharinwirot header" id="a_lastname">นิรันต์</p>
-			</div>
-			
-			
-			<div class="a-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					นายพิชัย นิรันต์ เกิด ๗ กุมภาพันธ์ พ.ศ.๒๕๗๙ ได้รับการยกย่องเชิดชูเกียรติเป็นศิลปินแห่งชาติ สาขาทัศนศิลป์ (จิตรกรรม) ประจำปีพ.ศ.๒๕๔๖
 				</p>
@@ -179,13 +160,9 @@
 				<img src="img/artist/5/a.jpg" class="h_imgContent" id="a_img">
 			</div>
 
-			<div class="artistName">
+			<div class="a-innerContent">
 				<p class="green Srinakharinwirot header" id="a_firstname">เนติกร</p>
 				<p class="green Srinakharinwirot header" id="a_lastname">ชินโย</p>
-			</div>
-			
-			
-			<div class="a-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					อาจารย์เนติกร ชินโย เกิด ๘ ธันวาคม พ.ศ.๒๕๐๙ และยังเป็นอาจารย์หมวดพื้นฐานทางศิลปะ คณะศิลปกรรมศาสตร์ ได้รับรางวัลที่ ๒ ในการประกวดศิลปกรรมแห่งชาติ และรางวัลชนะเลิศ ในการประกวดภาพพิมพ์และวาดเส้นนานาชาติ
 				</p>
@@ -208,13 +185,9 @@
 				<img src="img/artist/6/a.jpg" class="h_imgContent" id="a_img">
 			</div>
 
-			<div class="artistName">
+			<div class="a-innerContent">
 				<p class="green Srinakharinwirot header" id="a_firstname">จินตนา</p>
 				<p class="green Srinakharinwirot header" id="a_lastname">เปี่ยมศิริ</p>
-			</div>
-			
-			
-			<div class="a-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					อาจารย์จินตนา เปี่ยมศิริ เกิด ๑๐ กันยายน พ.ศ.๒๕๐๙ การศึกษา ศิลปบัณฑิต (ศิลปะไทย) คณะจิตรกรรมประติมากรรมและภาพพิมพ์ มหาวิทยาลัยศิลปากร ศิลปมหาบัณฑิต (ศิลปะไทย) บัณฑิตวิทยาลัย มหาวิทยาลัยศิลปากร
 				</p>
@@ -236,13 +209,9 @@
 				<img src="img/artist/7/a.jpg" class="h_imgContent" id="a_img">
 			</div>
 
-			<div class="artistName">
+			<div class="a-innerContent">
 				<p class="green Srinakharinwirot header" id="a_firstname">ปัญญา</p>
 				<p class="green Srinakharinwirot header" id="a_lastname">วิจินธนสาร</p>
-			</div>
-			
-			
-			<div class="a-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					อาจารย์ปัญญา วิจินธนสาร เกิด ๒๔ มิถุนายน พ.ศ.๒๔๙๙ ได้รับการเชิดชูเกียรติในฐานะศิลปินแห่งชาติ ประจำปี พ.ศ.๒๕๕๗ สาขาทัศนศิลป์ (จิตรกรรม) เคยดำรงตำแหน่งคณบดี คณะจิตรกรรมประติมากรรมและภาพพิมพ์ และรองอธิบดีฝ่ายศิลปวัฒนธรรมของมหาวิทยาลัยศิลปากร และขณะนี้ยังคงรับเป็นอาจารย์บรรยายพิเศษให้กับทางมหาวิทยาลัยฯ
 				</p>
@@ -265,28 +234,25 @@
 				<img src="img/artist/8/a.jpg" class="h_imgContent" id="a_img">
 			</div>
 
-			<div class="artistName">
+			<div class="a-innerContent">
 				<p class="green Srinakharinwirot header" id="a_firstname">ธีระวัฒน์</p>
 				<p class="green Srinakharinwirot header" id="a_lastname">คะนะมะ</p>
-			</div>
-			
-			
-			<div class="a-innerContent">
 				<p class="darkGreen baiJamjuree" id="h_innerContent_sec1">
 					อาจารย์ ธีระวัฒน์ คะนะมะ เกิดวันที่ ๓๐ ธันวาคม พ.ศ.๒๕๐๗ จบการศึกษาจากวิทยาลัยอาชีวศึกษามหาสารคาม แล้วเข้ามาศึกษาที่คณะจิตรกรรมฯมหาวิทยาลัยศิลปากร(ศิลปไทย) ได้รางวัลยอดเยี่ยม พู่กันทอง จิตรกรรมเทิดพระเกียรติสมเด็จพระเทพรัตนราชสุดาฯสยามบรมราชกุมารี
 				</p>
 			</div>
 
-			
+			<div class="a-work">
 				<img src="img/artist/8/1.jpg" class="mobile-width">
 				<img src="img/artist/8/2.jpg" class="mobile-width">
+			</div>				
 			
 		</div>
 
-		
-		
 	</div>
-<footer class="footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเก้าเจ้าคุณทหารลาดกระบัง © 2019</footer>
+
+	<footer class="a-footer baiJamjuree">เว็บไซต์นี้เป็นส่วนหนึ่งของวิชาออกแบบเว็บไซต์ หลักสูตรนิเทศศิลป์ คณะสถาปัตยกรรมศาสตร์และการโปรแกรมและสื่อประสม แขนงวิชาพัฒนาเกมและสื่อประสม คณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเก้าเจ้าคุณทหารลาดกระบัง © 2019</footer>
+
 	<script type="text/javascript">
 		
 		a_menu1.addEventListener("click", clickContent1);
