--- a/artist.html
+++ b/artist.html
@@ -39,8 +39,8 @@
 				<a href="media.html" id="head_m3">MEDIA</a>
 			</li>
 			<li class="dropdown-submenu" id="m4">
-				<a href="artist.html" id="head_m4" class="setDisplay">ARTIST</a>
-				<ul class="innerMenu">
+				<a href="#" id="head_m4" class="setDisplay">ARTIST</a>
+				<ul class="dropdown-menu innerMenu">
 					<li id="a_menu1" class="green clickMenu">เฉลิมชัย โฆษิตพิพัฒน์</li>
 					<li id="a_menu2">ประหยัด พงษ์ดำ</li>
 					<li id="a_menu3">ปรีชา เถาทอง</li>
@@ -390,7 +390,7 @@
 			if (screen.width < 812) {
 				// mobile
 				head_m4.classList.remove("setDisplay");
-				head_m4.classList.add("lightGreen");
+				head_m4.classList.add("green");
 			}
 		}
 
