--- a/history.html
+++ b/history.html
@@ -215,7 +215,10 @@
 
 		window.onload = chkSize();
 		function chkSize(){
-			if (screen.width < 812) {head_m2.classList.remove("setDisplay");}
+			if (screen.width < 812) {
+				head_m2.classList.remove("setDisplay");
+				head_m2.classList.add("lightOrange");
+			}
 		}
 
 		window.addEventListener('resize', reportWindowSize);
