--- a/media.html
+++ b/media.html
@@ -34,8 +34,8 @@
 				<a href="history.html" id="head_m2">HISTORY</a>
 			</li>
 			<li class="dropdown-submenu" id="m3" >
-				<a href="media.html" id="head_m3" class="setDisplay">MEDIA</a>
-				<ul class="innerMenu">
+				<a href="#" id="head_m3" class="setDisplay">MEDIA</a>
+				<ul class="dropdown-menu innerMenu">
 					<li id="m_menu1" class="darkOrange clickMenu">พระมหาชนกฉบับตีพิมพ์</li>
 					<li id="m_menu2">หนังสือการ์ตูนพระมหาชนก</li>
 					<li id="m_menu3">แอนิเมชั่นพระมหาชนก</li>
