--- a/story.html
+++ b/story.html
@@ -15,13 +15,13 @@
 		@media only screen and (min-width: 770px) {
 			#menuBar{display: none;}
 		}
-		#paragraph{
-		transform: scale(1);
-		transition: all .5s;
-	}
-	#paragraph.small{
-		transform: scale(0.2);
-	}
+		.paragraph{
+			transform: scale(1);
+			transition: all .5s;
+		}
+		.paragraph.small{
+			transform: scale(0.2);
+		}
 	</style>
 </head>
 <body>
@@ -59,22 +59,22 @@
 	<div class="h-content" id="m_content1">
 		<p class="lightGreen Srinakharinwirot header" id="h_innerHead" style="letter-spacing: 2px;">เนื้อเรื่อง<br>พระมหาชนก</p>
 		<img src="img/story/11.png">
-		<p class="darkGreen s-content" id="paragraph">
+		<p class="darkGreen s-content paragraph" id="p1">
 			พระมหากษัตริย์ผู้ครองราชย์นครมิถิลาเมืองหลวงแห่งแคว้นวิเทหะ ทรงมีพระราชโอรสสองพระองค์ คือ พระอริฏฐชนกและพระโปลชนก หลังจากพระราชบิดาสวรรคต พระอริฏฐชนกผู้เป็นพระมหาอุปราชก็เสด็จขึ้นครองราชย์ต่อมาโดยทรงแต่งตั้งพระโปลชนกผู้เป็นน้องชายเป็นพระมหาอุปราช<br><br>
 			ในเวลาต่อได้มีเหล่าอำมาตย์ผู้ทุจริตบางคนออกอุบายให้พระอริฏฐชนกเกิดความระแวงน้องชายตนเอง โดยพากันเพ็ดทูลว่าพระโปลชนกกำลังวางแผนคิดการประทุษร้ายต่ออาณาจักร พระราชาทรงหลงเชื่ออำมาตย์เหล่านั้น จึงทรงให้ราชมัลจับกุมพระโปลชนกไปขังไว้ทว่าด้วยบุญบารมีของพระโปลชนก พระองค์จึงสามารถหลบออกจากที่คุมขังและเสด็จหนีไปยังชายแดนได้
 		</p>
-		<img src="img/story/12.png">
-		<p class="darkGreen s-content">
+		<img src="img/story/12.png" class="small paragraph" id="img2">
+		<p class="darkGreen s-content small paragraph" id="p2">
 			ครั้นเมื่อไปถึงก็มีบรรดาราษฏรผู้ที่จงรักภักดีต่อพระองค์พากันมาเข้าร่วมเป็นพวกด้วยมากมายและเมื่อถึงกาลที่เอื้ออำนวย พระโปลชนกก็ทรงตัดสินพระทัยยกกองทัพไปยังนครมิถิลา<br><br>
 			ครั้นเมื่อทัพของพระองค์ไปถึงบรรดาทหารรักษาเมืองจำนวนมากได้พากันแปรภักดิ์มาเข้ากับพระโปลชนกเนื่องจากเห็นใจที่พระโปลชนกถูกจับไปขังไว้อย่างไม่เป็นธรรม<br><br>
 			เมื่อพระพระอริฏฐชนกทรงทราบว่าพระโปลชนกยกทัพมาชิงราชสมบัติและได้มีเหล่าไพร่พลจำนวนมากแปรภักดิ์ พระองค์ตรัสสั่งพระมเหสีซึ่งกำลังทรงครรภ์แก่ให้ทรงหลบหนีเอาตัวรอด ส่วนพระองค์เองทรงยกทัพออกทำสงครามกับพระโปลชนกจนสิ้นพระชนม์ในสนามรบ เมื่อนั้นพระโปลชนกจึงทรงขึ้นเป็นกษัตริย์ครองนครมิถิลาสืบต่อมา
 		</p>
 		<img src="img/story/13.png">
-		<p class="darkGreen s-content">
+		<p class="darkGreen s-content small paragraph" id="p3">
 			ฝ่ายพระมเหสีของพระพระอริฏฐชนกได้เสด็จหนีไปยังเมืองกาลจัมปากะ ระหว่างทางพระอินทร์เสด็จลงมาช่วย โดยทรงแปลงกายเป็นชายชราขับเกวียนพาพระนางเสด็จไปถึงและให้พระนางนั่งพักอยู่ในศาลาแห่งหนึ่งภายในเมือง บังเอิญพราหมณ์ทิศาปราโมกข์เดินผ่านมาก็เกิดความเอ็นดูสงสาร จึงรับพระนางไปอยู่ด้วยและอุปการะเลี้ยงดูดุจเป็นน้องสาว ไม่นานนักพระมเหสีของพระเจ้าอริฏฐชนกก็ประสูติพระโอรส ทรงตั้งพระนามว่า มหาชนกกุมาร ตามพระนามของพระอัยกา
 		</p>
 		<img src="img/story/14.png">
-		<p class="darkGreen s-content">
+		<p class="darkGreen s-content small paragraph" id="p4">
 			วันหนึ่ง มหาชนกกุมารได้ชกต่อยกับเพื่อนหลังจากล้อเลียนว่าเป็นลูกไม่มีพ่อ มหาชนกกุมารพยายามถามความจริงจากพระมารดา พระมารดาจึงตรัสเล่าเรื่องทั้งหมดให้ทราบ พระองค์จึงตั้งพระทัยว่าเมื่อเติบใหญ่ก็จะเสด็จไปเอาราชสมบัติเมืองมิถิลากลับคืนมา<br><br>
 			ครั้นเมื่อพระมหาชนกกุมารเติบใหญ่ พระองค์ก็ตรัสแก่พระมารดาว่าจะไปล่องเรือสู่ดินแดนสุวรรณภูมิเพื่อทำการค้าสะสมทุนรอนและกำลังคนเพื่อชิงเอาราชสมบัตินครมิถิลากลับคืน พระมารดาจึงทรงนำเอาทรัพย์สินมีค่ามาจากมิถิลา ๓ สิ่ง คือ แก้วมณี แก้วมุกดาและแก้ววิเชียร เพื่อเป็นทุนล่องเรือไปค้าขายที่สุวรรณภูมิ<br><br>
 			ในระหว่างทางเกิดพายุใหญ่โหมกระหน่ำอย่างรุนแรงจนเรือจะล่ม บรรดาลูกเรือต่างหวาดกลัวและร้องคร่ำครวญหนีตายจนเกิดความโกลาหล<br><br>
@@ -141,17 +141,44 @@
 		function toHomepage(){
 			location.href = "index.html";
 		}
-		// x = document.getElementsByTagName("p");
+		
 		function ppp(){
-			
-			let ppR = paragraph.getBoundingClientRect();
-			// console.log(x[1])
-			if (ppR.top < window.innerHeight && ppR.bottom > 0) {
-				paragraph.classList.remove('small')
+			let pp1 = p1.getBoundingClientRect();
+			if (pp1.top < window.innerHeight && pp1.bottom > 0) {
+				p1.classList.remove('small');
 			}
 			else {
-				paragraph.classList.add('small')
+				p1.classList.add('small');
 			}
+			let pp2 = p2.getBoundingClientRect();
+			if (pp2.top < window.innerHeight && pp2.bottom > 0) {
+				p2.classList.remove('small');
+			}
+			else {
+				p2.classList.add('small');
+			}
+			let pp3 = p3.getBoundingClientRect();
+			if (pp3.top < window.innerHeight && pp3.bottom > 0) {
+				p3.classList.remove('small');
+			}
+			else {
+				p3.classList.add('small');
+			}
+			let pp4 = p4.getBoundingClientRect();
+			if (pp4.top < window.innerHeight && pp4.bottom > 0) {
+				p4.classList.remove('small');
+			}
+			else {
+				p4.classList.add('small');
+			}
+			let ipp4 = img2.getBoundingClientRect();
+			if (ipp4.top < window.innerHeight && ipp4.bottom > 0) {
+				img2.classList.remove('small');
+			}
+			else {
+				img2.classList.add('small');
+			}
+			
 		}
 		window.addEventListener("scroll", ppp);
 	</script>
