--- a/history.html
+++ b/history.html
@@ -71,7 +71,7 @@
 			<div class="h-innerContent2">
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“พระราชานุกิจรัชกาลที่ ๘”</strong><br>
-					กำหนดเวลาที่พระเจ้าแผ่นดินจะทรงประพฤติพระราชกิจต่างๆ ประจำทุกวันเป็นส่วนพระองค์ โดยอยู๋ในกฎมนเทียรบาล ตั้งแต่ครั้งรัชกาลสมเด็จพระบรมไตรโลกนาถ ซึ่งแสดงถึงพระปรีชาญาณด้านภาษาไทยของพระองค์ตั้งแต่ยังทรงพระเยาว์
+					กำหนดเวลาที่พระเจ้าแผ่นดินจะทรงประพฤติพระราชกิจต่างๆ ประจำทุกวันเป็นส่วนพระองค์ โดยอยู่ในกฎมนเทียรบาล ตั้งแต่ครั้งรัชกาลสมเด็จพระบรมไตรโลกนาถ ซึ่งแสดงถึงพระปรีชาญาณด้านภาษาไทยของพระองค์ตั้งแต่ยังทรงพระเยาว์
 				</p>
 				<p class="darkGreen baiJamjuree" id="h_innerContent">
 					<strong>“เมื่อข้าพเจ้าจากสยามมาสู่สวิตเซอร์แลนด์”</strong><br>
