--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<p id="captionText"></p>
 			</div>
 		</div>
-		<div id="clickMe"></div>
+		<!-- <div id="clickMe"></div> -->
 
 		<div id="homepage" class="home-1">
 			
